# renderer

./: .gitignore  Cargo.toml  build.sh  check.sh
.github/workflows/: android.yml  web.yml  x86-64-linux.yml  x86-64-windows.yml
android/: .gitignore  build.gradle.kts  proguard-rules.pro  settings.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/top/fifthlight/renderer/: MainActivity.kt  Native.kt
crates/renderer/: Cargo.toml
crates/renderer-android/: Cargo.toml
crates/renderer-android/src/: gui.rs  jni.rs  keycodes.rs  lib.rs
crates/renderer-asset/: Cargo.toml
crates/renderer-asset/src/: animation.rs  camera.rs  index.rs  lib.rs  material.rs  mesh.rs  node.rs  primitive.rs  scene.rs  skin.rs  tangent.rs  texture.rs
crates/renderer-asset/src/archive/: mod.rs  tar.rs  xp3.rs  zip.rs
crates/renderer-asset/src/loader/: mod.rs  obj.rs  texture.rs
crates/renderer-asset/src/loader/gltf/: mod.rs  scheme.rs
crates/renderer-asset/src/loader/pmx/: format.rs  mod.rs
crates/renderer-desktop/: Cargo.toml
crates/renderer-desktop/src/: main.rs
crates/renderer-perf-tracker/: Cargo.toml
crates/renderer-perf-tracker/src/: lib.rs
crates/renderer-protocol/: Cargo.toml
crates/renderer-protocol/src/: entity.rs  input.rs  lib.rs  message.rs  tick.rs  version.rs
crates/renderer-server/: Cargo.toml
crates/renderer-server/src/: main.rs
crates/renderer-server/src/entity/: mod.rs  object.rs  player.rs  test.rs
crates/renderer-server/src/server/: connection.rs  message.rs  mod.rs  serve.rs  websocket.rs
crates/renderer-server/src/world/: mod.rs
crates/renderer-web/: Cargo.toml  build.rs
crates/renderer-web/src/: gui.rs  lib.rs
crates/renderer-web/src/gui/: connect.rs  mod.rs
crates/renderer-web/src/transport/: codec.rs  mod.rs  websocket.rs
crates/renderer/src/: client.rs  lib.rs  perf.rs  state.rs  winit.rs
crates/renderer/src/asset/: animation.rs  camera.rs  material.rs  mesh.rs  mod.rs  node.rs  primitive.rs  scene.rs  skin.rs  texture.rs
crates/renderer/src/asset/loader/: gltf.rs  mod.rs  obj.rs
crates/renderer/src/asset/loader/pmx/: format.rs  mod.rs
crates/renderer/src/client/: mod.rs  world.rs
crates/renderer/src/client/entity/: mod.rs  object.rs  player.rs  test.rs
crates/renderer/src/gui/: animation.rs  entity.rs  error.rs  event.rs  joystick.rs  light.rs  load.rs  matrix.rs  mod.rs  perf.rs  state.rs
crates/renderer/src/gui/connect/: mod.rs  tokio.rs
crates/renderer/src/renderer/: animation.rs  loader.rs  mod.rs  pipeline.rs  tangent.rs  texture.rs  vertex.rs
crates/renderer/src/renderer/buffer/: mod.rs
crates/renderer/src/renderer/node/: crosshair.rs  light.rs  mod.rs  skin.rs
crates/renderer/src/renderer/uniform/: light.rs  mod.rs  skin.rs  texture.rs  transform.rs
crates/renderer/src/shader/: shader.wgsl
crates/renderer/src/transport/: mod.rs  tokio.rs
src/: lib.rs  main.rs  perf.rs
src/asset/: material.rs  mod.rs  node.rs  normal.rs  primitive.rs  scene.rs  skin.rs  texture.rs
src/asset/loader/: gltf.rs  mod.rs  obj.rs  texture.rs
src/asset/loader/pmx/: mod.rs
src/gui/: animation.rs  context.rs  light.rs  load.rs  matrix.rs  mod.rs  node_tree.rs  perf.rs
src/renderer/: animation.rs  camera.rs  context.rs  depth_texture.rs  index.rs  loader.rs  mod.rs  pipeline.rs  texture.rs  vertex.rs
src/renderer/node/: camera.rs  crosshair.rs  group.rs  joint.rs  light.rs  mod.rs  primitive.rs  skin.rs  transform.rs
src/renderer/uniform/: camera.rs  joint.rs  light.rs  mod.rs  skin.rs  transform.rs
src/shader/: color_shader.wgsl  color_skin_shader.wgsl  shader.wgsl  texture_shader.wgsl  texture_skin_shader.wgsl
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.ts
