[workspace]
resolver = "2"
members = [
    "crates/renderer",
    "crates/renderer-android",
    "crates/renderer-desktop",
    "crates/renderer-web",
]

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
gltf = { version = "1", features = [
    "import",
    "KHR_materials_unlit",
    "KHR_texture_transform",
    "KHR_materials_emissive_strength",
    "extensions",
] }
image = "0.25"
log = "0.4"
pollster = "0.4"
tobj = "4"
wgpu = { version = "22.1", features = ["webgl"] }
winit = "0.30"
egui = "0.29"
egui-wgpu = "0.29"
egui_plot = "0.29"
egui-winit = { version = "0.29", default-features = false }
binrw = "0.14"
modular-bitfield = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1.1.0"
getrandom = "0.2"
env_logger = "0.11"
rfd = "0.15"
jni = "0.21"
ndk = "0.9"
android_logger = "0.14"
log-panics = { version = "2", features = ["with-backtrace"] }
android-activity = { version = "0.6", features = ["game-activity"] }
console_log = "1.0"
console_error_panic_hook = "0.1"
web-sys = "0.3.70"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
