[workspace]
resolver = "2"
members = [
    "crates/renderer",
    "crates/renderer-android",
    "crates/renderer-desktop",
    "crates/renderer-web",
    "crates/renderer-server",
]

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["serde"] }
image = "0.25"
log = "0.4"
pollster = "0.4"
wgpu = { version = "22.1", features = ["webgl"] }
getrandom = "0.2"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

# OBJ
tobj = "4"

# GLTF
gltf = { version = "1", features = [
    "import",
    "KHR_materials_unlit",
    "KHR_texture_transform",
    "KHR_materials_emissive_strength",
    "extensions",
] }

# PMX
binrw = "0.14"
modular-bitfield = "0.11"

# GUI
egui = "0.29"
egui-wgpu = "0.29"
egui_plot = "0.29"
egui-winit = { version = "0.29", default-features = false }

# Desktop
winit = "0.30"
rfd = "0.15"

# Android
jni = "0.21"
ndk = "0.9"
android_logger = "0.14"
log-panics = { version = "2", features = ["with-backtrace"] }
android-activity = { version = "0.6", features = ["game-activity"] }

# Web
console_log = "1.0"
console_error_panic_hook = "0.1"
web-sys = "0.3.70"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1.1.0"

# Server
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
futures = "0.3"
tokio-tungstenite = "0.24.0"
tokio-serde = { version = "0.9", features = ["json", "bincode"] }
bytes = "1.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
