[package]
name = "renderer-android"
version = "0.1.0"
edition = "2021"
publish = false

[features]
log-panics = ["dep:log-panics"]

[lib]
name = "renderer_android"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
renderer = { path = "../renderer" }
log.workspace = true
jni.workspace = true
ndk.workspace = true
android_logger.workspace = true
log-panics = { workspace = true, optional = true }
android-activity.workspace = true
pollster.workspace = true
