[package]
name = "renderer-asset"
version = "0.1.0"
edition = "2021"
publish = false

[features]
obj = ["tobj"]
gltf = ["dep:gltf", "base64"]
pmx = ["binrw", "modular-bitfield"]
zip = ["dep:zip"]
tar = ["dep:tar"]
xp3 = ["dep:xp3"]
digest = ["sha2"]

[dependencies]
glam.workspace = true
image.workspace = true
gltf = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
tobj = { workspace = true, optional = true }
binrw = { workspace = true, optional = true }
modular-bitfield = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
xp3 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
