[package]
name = "renderer-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger.workspace = true
glam.workspace = true
serde.workspace = true
log.workspace = true
uuid.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
tokio-serde.workspace = true
bytes.workspace = true
