[package]
name = "renderer-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
renderer = { path = "../renderer" }
getrandom = { version = "*", features = ["js"] }
log.workspace = true
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
] }
