[package]
name = "renderer-web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen-futures.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
renderer.path = "../renderer"
getrandom = { version = "*", features = ["js"] }
log.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
] }
rfd.workspace = true
