[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
publish = false

[features]
gui = ["egui", "egui-wgpu"]
winit = ["dep:winit", "pollster"]
winit-gui = ["gui", "winit", "egui-winit"]

[dependencies]
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
image.workspace = true
log.workspace = true
tobj.workspace = true
wgpu.workspace = true
winit = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui-wgpu = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }
binrw.workspace = true
modular-bitfield.workspace = true
pollster = { workspace = true, optional = true }
web-time.workspace = true
