[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
publish = false

[features]
winit = ["dep:winit", "egui-winit", "pollster"]

[dependencies]
renderer-perf-tracker.path = "../renderer-perf-tracker"
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
image.workspace = true
log.workspace = true
tobj.workspace = true
wgpu.workspace = true
winit = { workspace = true, optional = true }
egui.workspace = true
egui-wgpu.workspace = true
egui-winit = { workspace = true, optional = true }
binrw.workspace = true
modular-bitfield.workspace = true
pollster = { workspace = true, optional = true }
web-time.workspace = true
getrandom.workspace = true
