[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
publish = false

[features]
winit = ["dep:winit", "egui-winit", "pollster"]
tokio-transport = ["tokio", "tokio-tungstenite", "tokio-serde", "futures"]

[dependencies]
renderer-perf-tracker.path = "../renderer-perf-tracker"
renderer-protocol.path = "../renderer-protocol"
renderer-asset = { path = "../renderer-asset", features = ["full"] }
bytemuck.workspace = true
glam.workspace = true
gltf.workspace = true
image.workspace = true
log.workspace = true
tobj.workspace = true
wgpu.workspace = true
winit = { workspace = true, optional = true }
egui.workspace = true
egui-wgpu.workspace = true
egui-winit = { workspace = true, optional = true }
binrw.workspace = true
modular-bitfield.workspace = true
pollster = { workspace = true, optional = true }
getrandom.workspace = true
uuid.workspace = true
serde.workspace = true
tokio = { workspace = true, optional = true, features = [
    "rt-multi-thread",
    "net",
    "sync",
    "macros",
] }
tokio-tungstenite = { workspace = true, optional = true }
tokio-serde = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
bytes.workspace = true
